# teensy-dash

./: .travis.yml  CMakeLists.txt  README.md  index.html  params.json
cmake/: CheckCXXCompilerFlag.cmake
cmake/toolchains/: teensy.cmake
diagram/: dash.fzz
documentation/schematics/: dash.fzz
source/: Application.h  EmbeddedApplication.cpp  EmulatorApplication.cpp  Version.h.in  main.cpp
source/ApplicationLayer/: DashApplication.cpp  DashApplication.h  DrawEventArgs.h  Fonts.h  Images.h  ModelCollection.cpp  ModelCollection.h  ModelUpdateTask.cpp  ModelUpdateTask.h  Palette.h  Shiftlight.cpp  Shiftlight.h  UserEventsTask.cpp  UserEventsTask.h  UserInterfaceTask.cpp  UserInterfaceTask.h  ViewCollection.cpp  ViewCollection.h
source/ApplicationLayer/Models/: AccelerationModel.cpp  AccelerationModel.h  CalculatedGearModel.cpp  CalculatedGearModel.h  ConversionHelper.cpp  ConversionHelper.h  GenericThirdOrderModel.cpp  GenericThirdOrderModel.h  InjectorModel.cpp  InjectorModel.h  Model.cpp  Model.h  ParkDistanceModel.cpp  ParkDistanceModel.h  PitchModel.cpp  PitchModel.h  RPMModel.cpp  RPMModel.h  RandomValueModel.cpp  RandomValueModel.h  RepresentableModel.h  RollModel.cpp  RollModel.h  SpeedModel.cpp  SpeedModel.h  TirePressureModel.cpp  TirePressureModel.h  TripComputerModel.cpp  TripComputerModel.h  TripData.cpp  TripData.h  VoltageModel.cpp  VoltageModel.h  WheelTickModel.cpp  WheelTickModel.h
source/ApplicationLayer/Views/: BaseView.h  GraphView.cpp  GraphView.h  IconValueRow.cpp  IconValueRow.h  LargeValueView.cpp  LargeValueView.h  ParkDistanceView.cpp  ParkDistanceView.h  TPMSView.cpp  TPMSView.h  ThreeRowView.cpp  ThreeRowView.h  TripComputerView.cpp  TripComputerView.h  TwoRowView.cpp  TwoRowView.h  View.h  XYScatterView.cpp  XYScatterView.h
source/Common/: ArduinoWrapper.h  Config.h  DisableInterruptContext.h  Interpolation.h  List.h  Logger.h  Math.cpp  Math.h  NonCopyable.h  Task.h  TaskScheduler.cpp  TaskScheduler.h  TimedTask.cpp  TimedTask.h
source/HardwareLayer/: ADXL335Driver.h  AccelerometerDriver.h  AnalogPin.h  DigitalPin.h  DisplayDriver.h  FrequencyCounter.h  Hardware.h  LedDriver.h  Platform.h  RotaryEncoder.h  SDLAnalogPin.cpp  SDLDisplayDriver.cpp  SDLDisplayDriver.h  SDLHardware.cpp  SDLHardware.h  SDLPlatform.cpp  SDLPlatform.h  SDLTimer.cpp  ST7735DisplayDriver.cpp  ST7735DisplayDriver.h  TeensyAnalogPin.cpp  TeensyAnalogPin.h  TeensyHardware.cpp  TeensyHardware.h  TeensyTimer.cpp  TeensyTimer.h  Timer.h
source/HardwareLayer/Common/: ADXL335Driver.cpp  ADXL335Driver.h
source/HardwareLayer/SDL/: SDLAnalogPin.h  SDLDigitalPin.cpp  SDLDigitalPin.h  SDLDisplayDriver.cpp  SDLDisplayDriver.h  SDLFrequencyCounter.cpp  SDLFrequencyCounter.h  SDLHardware.cpp  SDLHardware.h  SDLLedDriver.h  SDLPlatform.cpp  SDLPlatform.h  SDLRotaryEncoder.cpp  SDLRotaryEncoder.h  SDLTimer.h
source/HardwareLayer/Teensy/: NeoPixelLedDriver.cpp  NeoPixelLedDriver.h  ST7735DisplayDriver.h  TeensyAnalogPin.cpp  TeensyDigitalPin.cpp  TeensyDigitalPin.h  TeensyFrequencyCounter.cpp  TeensyFrequencyCounter.h  TeensyHardware.cpp  TeensyHardware.h  TeensyPlatform.cpp  TeensyPlatform.h  TeensyRotaryEncoder.cpp  TeensyRotaryEncoder.h  TeensyTimer.cpp
source/PeripheralLayer/: AccelerationAxis.cpp  AccelerationAxis.h  Bitmap.h  Bitmaps.cpp  Bitmaps.h  Color.cpp  Color.h  Configuration.cpp  Configuration.h  EventSource.cpp  EventSource.h  EventTypes.h  Font.h  Fonts.cpp  Fonts.h  FrequencyCounter.cpp  FrequencyCounter.h  GraphicContext.cpp  GraphicContext.h  InputEvents.h  LedPatterns.cpp  LedPatterns.h  ParkDistanceDecoder.cpp  ParkDistanceDecoder.h  PatternPlayer.cpp  PatternPlayer.h  Peripherals.cpp  Peripherals.h  PowerManagement.cpp  PowerManagement.h  PulseCounter.cpp  PulseCounter.h  PulseDuration.cpp  PulseDuration.h  RotaryEventSource.cpp  RotaryEventSource.h  SerialEventSource.cpp  SerialEventSource.h  TextHelper.cpp  TextHelper.h  (+6 more)
tests/PeripheralLayer/: test_Color.cpp
tests/car_simulator/: car_simulator.ino
tests/integration/features/: config.yml  display-selected-gear.feature  display-speed.feature
tests/integration/features/step_definitions/: steps.rb
tests/integration/features/support/: env.rb  hooks.rb
tests/unit/ApplicationLayer/Models/: test_CalculatedGearModel.cpp  test_ParkDistanceModel.cpp  test_RPMModel.cpp  test_SpeedModel.cpp
tests/unit/Common/: test_List.cpp  test_Logger.cpp  test_TaskScheduler.cpp
tests/unit/PeripheralLayer/: test_AIMParser.cpp  test_Color.cpp  test_PatternPlayer.cpp
